--- a/client/android/whatshappening/res/values/strings.xml
+++ b/client/android/whatshappening/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="hello">Hello whatshappening!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+    
+    <string name="task_starting">Starting...</string>
+    <string name="task_working">Working...</string>
+    <string name="task_cancelled">Cancelled...</string>
+    <string name="task_completed">Completed...</string>
+    
 </resources>
