--- a/client/android/whatshappening/res/values/strings.xml
+++ b/client/android/whatshappening/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Maven Quickstart</string>
+    <string name="app_name">What\'s Happening</string>
     <string name="hello">Hello whatshappening!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
@@ -10,5 +9,4 @@
     <string name="task_working">Working...</string>
     <string name="task_cancelled">Cancelled...</string>
     <string name="task_completed">Completed...</string>
-    
 </resources>
