--- a/client/android/whatshappening/res/values/strings.xml
+++ b/client/android/whatshappening/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">What\'s Happening</string>
     <string name="hello">Hello whatshappening!</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">En pruebas... pronto en http://whatshappening.cc</string>
     
     <string name="task_starting">Starting...</string>
     <string name="task_working">Working...</string>
